name:                mapview-noexc
version:             0.1.0.0
synopsis:            Non-stdlib callbacks and types for mapview that are useful for working specifically with NOEXC flights.
-- description:
homepage:            https://mapview.noexc.org/
license:             MIT
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
-- copyright:
category:            KD8ZRC
build-type:          Simple
-- extra-source-files:
cabal-version:       >= 1.10

library
  exposed-modules:
    -- NBP4
      KD8ZRC.Flight.NBP4.CRC
    , KD8ZRC.Flight.NBP4.History
    , KD8ZRC.Flight.NBP4.Parser
    , KD8ZRC.Flight.NBP4.Types
    -- NBP3
    , KD8ZRC.Flight.NBP3.CRC
    , KD8ZRC.Flight.NBP3.History
    , KD8ZRC.Flight.NBP3.Parser
    , KD8ZRC.Flight.NBP3.Types
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4 && < 5
                     , aeson >= 0.9 && < 1
                     , bytestring >= 0.10
                     , coordinate >= 0.0.15 && < 0.1
                     , crc16 >= 0.1 && < 0.2
                     , lens >= 4.4 && < 5
                     , old-locale >= 1.0
                     , strict >= 0.3 && < 0.4
                     , text >= 1.1
                     , thyme >= 0.3.5 && < 0.4
                     , transformers >= 0.3 && < 0.6
                     , trifecta >= 1.4.3 && < 2
                     , mapview >= 3
                     , mapview-gpsd
                     , mapview-json
                     , mapview-websocket
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -threaded -O2 -fwarn-incomplete-uni-patterns

--------------------------------------------------------------------------------
-- New flights up top!
-- Set nbpN's Default field to False everywhere except for the latest flight.
--------------------------------------------------------------------------------

flag nbp4
  Description: Build for NBP4
  Manual: True
  Default: True

executable nbp4
  main-is:             Main.hs
  hs-source-dirs:      src/KD8ZRC/Flight/NBP4
  build-depends:       base >= 4 && < 5
                     , aeson >= 0.9 && < 1
                     , bytestring >= 0.10
                     , directory >= 1.2 && < 2
                     , text >= 1.1
                     , transformers >= 0.3 && < 0.6
                     , mapview-gpsd
                     , mapview-json
                     , mapview-noexc
                     , mapview-websocket
                     , mapview >= 3
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -threaded -O2 -fwarn-incomplete-uni-patterns
  if flag(nbp4)
    buildable: True
  else
    buildable: False

--------------------------------------------------------------------------------

flag nbp3
  Description: Build for NBP3
  Manual: True
  Default: False

executable nbp3
  main-is:             Main.hs
  hs-source-dirs:      src/KD8ZRC/Flight/NBP3
  build-depends:       base >= 4 && < 5
                     , aeson >= 0.9 && < 1
                     , bytestring >= 0.10
                     , directory >= 1.2 && < 2
                     , text >= 1.1
                     , transformers >= 0.3 && < 0.6
                     , mapview-noexc
                     , mapview-websocket
                     , mapview >= 3
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -threaded -O2 -fwarn-incomplete-uni-patterns
  if flag(nbp3)
    buildable: True
  else
    buildable: False
